[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"
packages = [{ include = "advent_of_code_2023" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = ">=1.16"
scipy = ">=1.6"
matplotlib = ">=3.6"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipython = ">=7"
pytest = "^7.4.3"
mypy = "^1.7.1"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130